<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IEMS</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="preferences">PREFERENCES</string>
    <string name="nearbyhospitals">NEARBY HOSPITALS</string>
    <string name="nearbyhospitalsnormal">Nearby Hospitals</string>
    <string name="emergency" translatable="false">EMERGENCY</string>
    <string name="symptomchecker">SYMPTOM CHECKER</string>
    <string name="diagnoseyourself">Diagnose Yourself</string>
    <string name="diagnoseother">Diagnose Others</string>
    <string name="symptomcheckernormal">Symptom Checker</string>
    <string name="signinheading">SIGN IN</string>
    <string name="signin">Sign In</string>
    <string name="register">Register</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="username">Username</string>
    <string name="usernamehint">username@email.com</string>
    <string name="password">Password</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="agegroup">Gender &amp; Age Group</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="contactno">Contact Number</string>
    <string name="examplephoneno">+94712345678</string>
    <string name="email">Email</string>
    <string name="retypepassword">Re-Type Password</string>
    <string name="address">Address</string>
    <string name="next">Next</string>
    <string name="generate">Generate</string>
    <string name="viewlist">View List</string>
    <string name="emergencycontacts">Emergency Contacts</string>
    <string name="answer">Answer</string>
    <string name="contact1">Contact 1</string>
    <string name="contact2">Contact 2</string>
    <string name="contact3">Contact 3</string>
    <string name="contact4">Contact 4</string>
    <string name="contact5">Contact 5</string>
    <string name="secquestion1">Security Question 1</string>
    <string name="secquestion2">Security Question 2</string>
    <string name="disease">A constant sense of hopelessness and despair is a sign you may have major depression, also known as clinical depression. \n\n

With major depression, it may be difficult to work, study, sleep, eat, and enjoy friends and activities. Some people have clinical depression only once in their life, while others have it several times in a lifetime.\n\n
Major depression seems to occur from one generation to the next in some families, but may affect people with no family history of the illness</string>
    <string name="sendsms">Send Emergency SMS</string>
    <string name="nearesthospitalhotline">Call Nearest Hospital Hotline</string>
    <string name="signup">Sign Up</string>

    <string name="gps_network_not_enabled">GPS network not enabled</string>
    <string name="cannot_predict">Cannot predict the disease please try again.</string>
    <string name="user">User</string>
    <string name="chat">Chat</string>
    <string name="chat1">CHAT</string>
    <string name="consultant_details">Consultant Details</string>
    <string name="send">Send</string>


</resources>