<?xml version="1.0" encoding="utf-8"?>
<!-- <TableLayout xmlns:android="http://schemas.android.com/apk/res/android" -->
<!--     android:id="@+id/TableLayout1" -->
<!--     android:layout_width="match_parent" -->
<!--     android:layout_height="match_parent" -->
<!--     android:stretchColumns="1" > -->

<!--     <TextView -->
<!--         android:id="@+id/txtNearbyHospitalName" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:background="@drawable/border" -->
<!--         android:paddingBottom="5dp" -->
<!--         android:paddingTop="5dp" -->
<!--         android:text="@string/signinheading" -->
<!--         android:textAppearance="?android:attr/textAppearanceLarge" -->
<!--         android:typeface="sans" /> -->

<!--     <TextView -->
<!--         android:id="@+id/txtNearbyHospitalContact" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:paddingTop="20dp" -->
<!--         android:text="@string/username" /> -->

<!--     <EditText -->
<!--         android:id="@+id/txtUsername" -->
<!--         android:layout_width="320dp" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:ems="10" -->
<!--         android:hint="@string/usernamehint" -->
<!--         android:inputType="textEmailAddress" /> -->

<!--     <TextView -->
<!--         android:id="@+id/textView3" -->
<!--         android:layout_width="320dp" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:paddingTop="10dp" -->
<!--         android:text="@string/password" /> -->

<!--     <EditText -->
<!--         android:id="@+id/txtPassword" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:ems="10" -->
<!--         android:inputType="textPassword" > -->
<!--     </EditText> -->

<!--     <TableRow -->
<!--         android:id="@+id/tableRow5" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:layout_gravity="center_horizontal" -->
<!--         android:paddingBottom="20dp" -->
<!--         android:paddingTop="10dp" > -->

<!--         <Button -->
<!--             android:id="@+id/btn_signin" -->
<!--             android:layout_width="0dp" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:layout_weight="1" -->
<!--             android:background="@drawable/borderless_button" -->
<!--             android:text="@string/signin" -->
<!--             android:textColor="@android:color/white" -->
<!--             android:textStyle="bold" /> -->

<!--         <Button -->
<!--             android:id="@+id/btn_forgotPassword" -->
<!--             android:layout_width="0dp" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:layout_weight="1" -->
<!--             android:background="@drawable/borderless_button" -->
<!--             android:text="@string/forgotpassword" -->
<!--             android:textColor="@android:color/white" -->
<!--             android:textStyle="bold" /> -->
<!--     </TableRow> -->

<!--     <Button -->
<!--         android:id="@+id/btn_register" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:background="@drawable/borderless_list_button" -->
<!--         android:text="@string/register" -->
<!--         android:textColor="@android:color/white" -->
<!--         android:textStyle="bold" /> -->

<!-- </TableLayout> -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#fcfefc"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="IEMS"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#020202"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/usernamehint"
        android:textColor="#020202"
        android:height="20dp"
        android:typeface="sans"
        android:textSize="25sp"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true" />
    
    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/txtUsername"
        android:layout_alignRight="@id/txtUsername"
        android:layout_below="@id/txtUsername"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColor="#020202"
        android:height="10dp"
        android:typeface="sans"
        android:textSize="25sp"
        android:layout_marginTop="20dp" />

    

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/green_btn_4"
        android:text="@string/signin"
        android:textColor="#fefdfd"
        android:textSize="30dp"
        android:textStyle="bold"
        android:width="230dp" 
        android:height="35dp"
        android:layout_below="@+id/txtPassword"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btn_forgotPassword"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/green_btn_4"
        android:height="35dip"
        android:text="@string/forgotpassword"
        android:textColor="#fefdfd"
        android:textSize="30sp"
        android:textStyle="bold"
        android:width="230dip"
        android:layout_below="@+id/btn_signin"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="15dip"
        android:layout_marginRight="19dip"
        android:contentDescription="Logo"
        android:src="@drawable/logo_small" />


</RelativeLayout>